@@ -4,11 +4,16 @@ import static com.fincity.security.jooq.enums.SecuritySoxLogActionName.CREATE;
 
 import java.net.InetSocketAddress;
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.EnumMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import com.fincity.security.dto.*;
 import org.jooq.types.ULong;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -20,6 +25,7 @@ import org.springframework.http.server.reactive.ServerHttpRequest;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.util.MultiValueMap;
 
 import com.fincity.nocode.kirun.engine.util.string.StringFormatter;
 import com.fincity.nocode.reactor.util.FlatMapUtil;
@@ -44,6 +50,12 @@ import com.fincity.saas.commons.util.LogUtil;
 import com.fincity.saas.commons.util.StringUtil;
 import com.fincity.security.dao.UserDAO;
 import com.fincity.security.dao.appregistration.AppRegistrationV2DAO;
+import com.fincity.security.dto.Client;
+import com.fincity.security.dto.ClientHierarchy;
+import com.fincity.security.dto.Profile;
+import com.fincity.security.dto.TokenObject;
+import com.fincity.security.dto.User;
+import com.fincity.security.dto.UserClient;
 import com.fincity.security.enums.otp.OtpPurpose;
 import com.fincity.security.jooq.enums.SecuritySoxLogActionName;
 import com.fincity.security.jooq.enums.SecuritySoxLogObjectName;
@@ -54,7 +66,6 @@ import com.fincity.security.model.AuthenticationPasswordType;
 import com.fincity.security.model.AuthenticationRequest;
 import com.fincity.security.model.ClientRegistrationRequest;
 import com.fincity.security.model.RequestUpdatePassword;
-import com.fincity.saas.commons.security.model.UserResponse;
 import com.fincity.security.model.otp.OtpGenerationRequestInternal;
 import com.fincity.security.model.otp.OtpVerificationRequest;
 
@@ -202,8 +213,10 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                                     List<String> appAuths = map.get(appCode);
                                     List<String> defaultAuths = map.getOrDefault("", new ArrayList<>());
 
-                                    if (appAuths == null || appAuths.isEmpty()) return defaultAuths;
-                                    if (defaultAuths.isEmpty()) return new ArrayList<>(appAuths);
+                                    if (appAuths == null || appAuths.isEmpty())
+                                        return defaultAuths;
+                                    if (defaultAuths.isEmpty())
+                                        return new ArrayList<>(appAuths);
                                     return Stream.of(appAuths.stream(), defaultAuths.stream())
                                             .flatMap(e -> e)
                                             .collect(Collectors.toCollection(ArrayList::new));
@@ -226,7 +239,8 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
 
     public Mono<Boolean> checkUserAndClient(Tuple3<Client, Client, User> userNClient, String clientCode) {
 
-        if (clientCode == null) return Mono.just(Boolean.FALSE);
+        if (clientCode == null)
+            return Mono.just(Boolean.FALSE);
 
         return Mono.just(
                 ContextAuthentication.CLIENT_TYPE_SYSTEM.equals(
@@ -343,19 +357,23 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                                     createdUser.getId(), CREATE, getSoxObjectName(), "User created");
                             return this.setPasswordEntities(createdUser, pass);
                         },
-                        (ca, user, isValid, pass, passValid, isAvailable, createdUser, passSet) ->
-                                this.evictOwnerCache(passSet.getClientId(), passSet.getId()).map(evicted -> passSet))
+                        (ca, user, isValid, pass, passValid, isAvailable, createdUser, passSet) -> this.evictOwnerCache(
+                                        passSet.getClientId(), passSet.getId())
+                                .<User>map(evicted -> passSet))
                 .contextWrite(Context.of(LogUtil.METHOD_NAME, "UserService.create"))
                 .switchIfEmpty(this.forbiddenError(SecurityMessageResourceService.FORBIDDEN_CREATE, "User"));
     }
 
     private void updateUserIdentificationKeys(User entity) {
 
-        if (StringUtil.safeIsBlank(entity.getUserName())) entity.setUserName(User.PLACEHOLDER);
+        if (StringUtil.safeIsBlank(entity.getUserName()))
+            entity.setUserName(User.PLACEHOLDER);
 
-        if (StringUtil.safeIsBlank(entity.getEmailId())) entity.setEmailId(User.PLACEHOLDER);
+        if (StringUtil.safeIsBlank(entity.getEmailId()))
+            entity.setEmailId(User.PLACEHOLDER);
 
-        if (StringUtil.safeIsBlank(entity.getPhoneNumber())) entity.setPhoneNumber(User.PLACEHOLDER);
+        if (StringUtil.safeIsBlank(entity.getPhoneNumber()))
+            entity.setPhoneNumber(User.PLACEHOLDER);
     }
 
     private Mono<Boolean> checkUserIdentificationKeys(User entity) {
@@ -396,11 +414,7 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
     }
 
     private Mono<Boolean> passwordPolicyCheck(
-            ULong urlClientId,
-            String appCode,
-            ULong userId,
-            AuthenticationPasswordType passwordType,
-            String password) {
+            ULong urlClientId, String appCode, ULong userId, AuthenticationPasswordType passwordType, String password) {
 
         return this.clientService.validatePasswordPolicy(urlClientId, appCode, userId, passwordType, password);
     }
@@ -409,10 +423,10 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
 
         return FlatMapUtil.flatMapMono(
                 () -> this.clientService.getClientTypeNCodeNClientLevel(clientId),
-                clientTypeNCode ->
-                        clientTypeNCode.getT1().equals("INDV") ? Mono.empty() : Mono.just(clientTypeNCode.getT1()),
-                (clientTypeNCode, clientType) ->
-                        this.dao.checkUserExists(clientId, "BUS", userName, emailId, phoneNumber));
+                clientTypeNCode -> clientTypeNCode.getT1().equals("INDV") ? Mono.empty()
+                        : Mono.just(clientTypeNCode.getT1()),
+                (clientTypeNCode, clientType) -> this.dao.checkUserExists(clientId, "BUS", userName, emailId,
+                        phoneNumber));
     }
 
     private Mono<User> setPasswordEntities(User user, Map<AuthenticationPasswordType, String> passEntities) {
@@ -431,7 +445,8 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
         return super.read(id)
                 .flatMap(
                         e -> SecurityContextUtil.getUsersContextAuthentication().flatMap(ca -> {
-                            if (id.equals(ULong.valueOf(ca.getUser().getId()))) return Mono.just(e);
+                            if (id.equals(ULong.valueOf(ca.getUser().getId())))
+                                return Mono.just(e);
 
                             if (!SecurityContextUtil.hasAuthority("Authorities.User_READ", ca.getAuthorities()))
                                 return Mono.defer(() -> this.forbiddenError(
@@ -443,36 +458,24 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                         Mono.defer(() -> this.forbiddenError(AbstractMessageService.OBJECT_NOT_FOUND, "User", id)));
     }
 
-    public Mono<UserResponse> readById(ULong userId) {
-        return this.readByIdWithCache(userId)
-                .flatMap(this::toUserResponse);
+    public Mono<User> readInternal(ULong userId) {
+        return this.cacheService.cacheValueOrGet(CACHE_NAME_USER, () -> this.dao.readInternal(userId), userId);
     }
 
-    public Mono<User> readByIdWithCache(ULong userId) {
-        return this.cacheService
-                .cacheValueOrGet(CACHE_NAME_USER, () -> this.dao.readInternal(userId), userId);
+    public Mono<User> readById(ULong userId, MultiValueMap<String, String> queryParams) {
+        return FlatMapUtil.flatMapMono(
+                () -> this.readInternal(userId),
+                user -> this.fillDetails(List.of(user), queryParams).map(List::getFirst));
     }
 
-    public Mono<List<UserResponse>> readByIds(List<ULong> userIds) {
-        return this.readAllFilter(new FilterCondition()
-                        .setField("id")
-                        .setOperator(FilterConditionOperator.IN)
-                        .setMultiValue(userIds))
-                .flatMap(this::toUserResponse)
-                .collectList();
-    }
-
-    private Mono<UserResponse> toUserResponse(User user) {
-        return Mono.just(new UserResponse()
-                .setId(user.getId().toBigInteger())
-                .setClientId(user.getClientId().toBigInteger())
-                .setUserName(user.getUserName())
-                .setEmailId(user.getEmailId())
-                .setPhoneNumber(user.getPhoneNumber())
-                .setFirstName(user.getFirstName())
-                .setLastName(user.getLastName())
-                .setMiddleName(user.getMiddleName())
-                .setLocaleCode(user.getLocaleCode()));
+    public Mono<List<User>> readByIds(List<ULong> userIds, MultiValueMap<String, String> queryParams) {
+        return FlatMapUtil.flatMapMono(
+                () -> this.readAllFilter(new FilterCondition()
+                                .setField("id")
+                                .setOperator(FilterConditionOperator.IN)
+                                .setMultiValue(userIds))
+                        .collectList(),
+                users -> this.fillDetails(users, queryParams));
     }
 
     @PreAuthorize("hasAuthority('Authorities.User_READ')")
@@ -481,21 +484,24 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
         return super.readPageFilter(pageable, condition);
     }
 
+    public Mono<Page<User>> readPageFilterInternal(Pageable pageable, AbstractCondition condition) {
+        return super.readPageFilter(pageable, condition);
+    }
+
     @Override
     public Mono<User> update(ULong key, Map<String, Object> fields) {
 
-        String userName =
-                fields.containsKey("userName") ? fields.get("userName").toString() : null;
+        String userName = fields.containsKey("userName") ? fields.get("userName").toString() : null;
 
         String emailId = fields.containsKey("emailId") ? fields.get("emailId").toString() : null;
 
-        String phoneNumber =
-                fields.containsKey("phoneNumber") ? fields.get("phoneNumber").toString() : null;
+        String phoneNumber = fields.containsKey("phoneNumber") ? fields.get("phoneNumber").toString() : null;
 
         return FlatMapUtil.flatMapMono(
                         () -> this.dao.getUserClientId(key),
-                        clientId ->
-                                this.clientService.getClientTypeNCodeNClientLevel(clientId).map(Tuple2::getT1),
+                        clientId -> this.clientService
+                                .getClientTypeNCodeNClientLevel(clientId)
+                                .map(Tuple2::getT1),
                         (clientId, clientType) -> switch (clientType) {
                             case "INDV" -> this.clientHierarchyService
                                     .getManagingClient(clientId, ClientHierarchy.Level.ZERO)
@@ -504,9 +510,9 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                             case "BUS" -> this.dao.checkUserExists(clientId, userName, emailId, phoneNumber, null);
                             default -> Mono.empty();
                         },
-                        (clientId, clientType, userExists) ->
-                                Boolean.TRUE.equals(userExists) ? Mono.empty() : super.update(key, fields),
-                        (clientId, clientType, userExists, updated) -> this.evictTokensAndOwnerCache(
+                        (clientId, clientType, userExists) -> Boolean.TRUE.equals(userExists) ? Mono.empty()
+                                : super.update(key, fields),
+                        (clientId, clientType, userExists, updated) -> this.evictCache(
                                         updated.getId(), updated.getClientId())
                                 .<User>map(evicted -> updated))
                 .switchIfEmpty(this.forbiddenError(SecurityMessageResourceService.FORBIDDEN_UPDATE, "user"));
@@ -537,27 +543,29 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                                     null);
                             default -> Mono.empty();
                         },
-                        (clientType, userExists) ->
-                                Boolean.TRUE.equals(userExists) ? Mono.empty() : super.update(entity),
-                        (clientType, userExists, updated) -> this.evictTokensAndOwnerCache(
-                                        updated.getId(), updated.getClientId())
-                                .map(evicted -> updated))
+                        (clientType, userExists) -> Boolean.TRUE.equals(userExists) ? Mono.empty() : super.update(entity),
+                        (clientType, userExists, updated) -> this.evictCache(updated.getId(), updated.getClientId())
+                                .<User>map(evicted -> updated))
                 .switchIfEmpty(this.forbiddenError(SecurityMessageResourceService.FORBIDDEN_UPDATE, "user"));
     }
 
-    private Mono<Integer> evictTokensAndOwnerCache(ULong userId, ULong clientId) {
-        return Mono.zip(
-                this.evictTokens(userId),
-                this.evictOwnerCache(clientId, userId),
-                (tEvicted, oEvicted) -> tEvicted == 1 && oEvicted == 1 ? 1 : 0);
+    private Mono<Integer> evictCache(ULong userId, ULong clientId) {
+        return Mono.zip(this.evictTokens(userId), this.evictOwnerCache(clientId, userId), this.evictUserCache(userId))
+                .map(evicted -> evicted.getT1() == 1 && evicted.getT2() == 1 && evicted.getT3() == 1 ? 1 : 0);
     }
 
-    private Mono<Integer> evictTokens(ULong id) {
-        return this.tokenService.evictTokensOfUser(id);
+    private Mono<Integer> evictTokens(ULong userId) {
+        return this.tokenService.evictTokensOfUser(userId);
+    }
+
+    private Mono<Integer> evictUserCache(ULong userId) {
+        return this.cacheService.evict(CACHE_NAME_USER, userId).map(evicted -> Boolean.TRUE.equals(evicted) ? 1 : 0);
     }
 
     private Mono<Integer> evictOwnerCache(ULong clientId, ULong userId) {
-        return this.userSubOrgService.evictOwnerCache(clientId, userId).map(evicted -> Boolean.TRUE.equals(evicted) ? 1 : 0);
+        return this.userSubOrgService
+                .evictOwnerCache(clientId, userId)
+                .map(evicted -> Boolean.TRUE.equals(evicted) ? 1 : 0);
     }
 
     @Override
@@ -586,12 +594,7 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                     return e;
                 })
                 .flatMap(this::update)
-                .flatMap(e -> this.evictTokensAndOwnerCache(e.getId(), e.getClientId())
-                        .map(x -> 1));
-    }
-
-    public Mono<User> readInternal(ULong id) {
-        return this.dao.readInternal(id);
+                .flatMap(e -> this.evictCache(e.getId(), e.getClientId()).map(x -> 1));
     }
 
     @PreAuthorize("hasAuthority('Authorities.User_UPDATE') and hasAuthority('Authorities.Role_READ')")
@@ -609,12 +612,13 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                                 .removeRoleForUser(userId, roleId)
                                 .map(val -> {
                                     boolean removed = val > 0;
-                                    if (removed) super.unAssignLog(userId, UNASSIGNED_ROLE);
+                                    if (removed)
+                                        super.unAssignLog(userId, UNASSIGNED_ROLE);
 
                                     return removed;
                                 }),
-                        (ca, user, isManaged, removed) -> this.evictTokensAndOwnerCache(userId, user.getClientId())
-                                .map(evicted -> removed))
+                        (ca, user, isManaged, removed) -> this.evictCache(userId, user.getClientId())
+                                .<Boolean>map(evicted -> removed))
                 .contextWrite(Context.of(LogUtil.METHOD_NAME, "UserService.removeRoleFromUser"))
                 .flatMap(this.cacheService.evictFunction(CACHE_NAME_USER_ROLE, userId))
                 .switchIfEmpty(this.forbiddenError(SecurityMessageResourceService.ROLE_REMOVE_ERROR, roleId, userId));
@@ -624,7 +628,8 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
     public Mono<Boolean> assignRoleToUser(ULong userId, ULong roleId) {
 
         return this.dao.checkRoleAssignedForUser(userId, roleId).flatMap(result -> {
-            if (Boolean.TRUE.equals(result)) return Mono.just(true);
+            if (Boolean.TRUE.equals(result))
+                return Mono.just(true);
 
             return FlatMapUtil.flatMapMono(
                             SecurityContextUtil::getUsersContextAuthentication,
@@ -643,13 +648,13 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                             (ca, user, sysOrManaged, roleApplicable) -> this.dao
                                     .addRoleToUser(userId, roleId)
                                     .map(e -> {
-                                        if (Boolean.TRUE.equals(e)) super.assignLog(userId, ASSIGNED_ROLE + roleId);
+                                        if (Boolean.TRUE.equals(e))
+                                            super.assignLog(userId, ASSIGNED_ROLE + roleId);
 
                                         return e;
                                     }),
-                            (ca, user, sysOrManaged, roleApplicable, roleAssigned) -> this.evictTokensAndOwnerCache(
-                                            userId, user.getClientId())
-                                    .map(evicted -> roleAssigned))
+                            (ca, user, sysOrManaged, roleApplicable, roleAssigned) -> this
+                                    .evictCache(userId, user.getClientId()).<Boolean>map(evicted -> roleAssigned))
                     .contextWrite(Context.of(LogUtil.METHOD_NAME, "UserService.assignRoleToUser"))
                     .flatMap(this.cacheService.evictFunction(CACHE_NAME_USER_ROLE, userId))
                     .switchIfEmpty(this.forbiddenError(SecurityMessageResourceService.ROLE_FORBIDDEN, roleId, userId));
@@ -668,11 +673,9 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                         (ca, user, sysManaged) -> profileService
                                 .hasAccessToProfiles(user.getClientId(), Set.of(profileId))
                                 .filter(BooleanUtil::safeValueOf),
-                        (ca, user, sysManaged, profileAccess) ->
-                                this.dao.addProfileToUser(userId, profileId).map(e -> e != 0),
-                        (ca, user, sysManaged, profileAccess, profileAssigned) -> this.evictTokensAndOwnerCache(
-                                        userId, user.getClientId())
-                                .map(evicted -> profileAssigned))
+                        (ca, user, sysManaged, profileAccess) -> this.dao.addProfileToUser(userId, profileId).map(e -> e != 0),
+                        (ca, user, sysManaged, profileAccess, profileAssigned) -> this.evictCache(userId, user.getClientId())
+                                .<Boolean>map(evicted -> profileAssigned))
                 .contextWrite(Context.of(
                         LogUtil.METHOD_NAME, "UserService.assignProfileToUser : [ " + userId + ", " + profileId + "]"))
                 .switchIfEmpty(
@@ -688,11 +691,9 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                         (ca, user) -> clientService
                                 .isBeingManagedBy(ULongUtil.valueOf(ca.getUser().getClientId()), user.getClientId())
                                 .filter(BooleanUtil::safeValueOf),
-                        (ca, user, sysManaged) ->
-                                this.dao.removeProfileForUser(userId, profileId).map(e -> e != 0),
-                        (ca, user, sysManaged, profileRemoved) -> this.evictTokensAndOwnerCache(
-                                        userId, user.getClientId())
-                                .map(evicted -> profileRemoved))
+                        (ca, user, sysManaged) -> this.dao.removeProfileForUser(userId, profileId).map(e -> e != 0),
+                        (ca, user, sysManaged, profileRemoved) -> this.evictCache(userId, user.getClientId())
+                                .<Boolean>map(evicted -> profileRemoved))
                 .contextWrite(Context.of(
                         LogUtil.METHOD_NAME, "UserService.assignProfileToUser : [ " + userId + ", " + profileId + "]"))
                 .switchIfEmpty(
@@ -752,7 +753,8 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
 
         ULong loggedInUserClientId = ULong.valueOf(ca.getUser().getClientId());
 
-        if (ca.isSystemClient() || user.getClientId().equals(loggedInUserClientId)) return Mono.just(Boolean.TRUE);
+        if (ca.isSystemClient() || user.getClientId().equals(loggedInUserClientId))
+            return Mono.just(Boolean.TRUE);
 
         return Mono.zip(
                         SecurityContextUtil.hasAuthority("Authorities.User_UPDATE"),
@@ -862,8 +864,7 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                                         (userClientCheck, userStatusCheck) -> userClientCheck && userStatusCheck)
                                 .flatMap(BooleanUtil::safeValueOfWithEmpty)
                                 .switchIfEmpty(this.forbiddenError(SecurityMessageResourceService.USER_NOT_ACTIVE)),
-                        (ca, userTup, userCheck) ->
-                                this.isPasswordUpdatable(ca, userTup.getT3(), reqPassword, Boolean.FALSE),
+                        (ca, userTup, userCheck) -> this.isPasswordUpdatable(ca, userTup.getT3(), reqPassword, Boolean.FALSE),
                         (ca, userTup, userCheck, isUpdatable) -> this.otpService
                                 .verifyOtpInternal(ca.getUrlAppCode(), userTup.getT3(), otpVerificationRequest)
                                 .flatMap(BooleanUtil::safeValueOfWithEmpty)
@@ -929,16 +930,15 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
     private Mono<Boolean> checkPassword(
             User user, String password, AuthenticationPasswordType passType, boolean matchExpected) {
 
-        boolean matches =
-                switch (passType) {
-                    case PASSWORD -> user.isPasswordHashed()
-                            ? passwordEncoder.matches(user.getId() + password, user.getPassword())
-                            : StringUtil.safeEquals(password, user.getPassword());
-                    case PIN -> user.isPinHashed()
-                            ? passwordEncoder.matches(user.getId() + password, user.getPin())
-                            : StringUtil.safeEquals(password, user.getPin());
-                    default -> false;
-                };
+        boolean matches = switch (passType) {
+            case PASSWORD -> user.isPasswordHashed()
+                    ? passwordEncoder.matches(user.getId() + password, user.getPassword())
+                    : StringUtil.safeEquals(password, user.getPassword());
+            case PIN -> user.isPinHashed()
+                    ? passwordEncoder.matches(user.getId() + password, user.getPin())
+                    : StringUtil.safeEquals(password, user.getPin());
+            default -> false;
+        };
 
         return Mono.just(matchExpected == matches);
     }
@@ -979,7 +979,8 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
     private Mono<Boolean> setPassword(
             ULong userId, ULong currentUserId, String password, AuthenticationPasswordType passwordType) {
 
-        if (currentUserId == null) currentUserId = userId;
+        if (currentUserId == null)
+            currentUserId = userId;
 
         return this.dao
                 .setPassword(userId, currentUserId, password, passwordType)
@@ -1084,18 +1085,17 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                                 levelType,
                                 client.getBusinessType()),
                         (levelType, departments) -> this.departmentService.createForRegistration(client, departments),
-                        (levelType, departments, departmentIndex) ->
-                                this.appRegistrationDAO.getDesignationsForRegistration(
-                                        appId,
-                                        appClientId,
-                                        urlClientId,
-                                        client.getTypeCode(),
-                                        levelType,
-                                        client.getBusinessType()),
-                        (levelType, departments, departmentIndex, designations) ->
-                                this.designationService.createForRegistration(client, designations, departmentIndex),
-                        (levelType, departments, departmentIndex, designations, designationIndex) ->
-                                this.appRegistrationDAO.getUserDesignationsForRegistration(
+                        (levelType, departments, departmentIndex) -> this.appRegistrationDAO.getDesignationsForRegistration(
+                                appId,
+                                appClientId,
+                                urlClientId,
+                                client.getTypeCode(),
+                                levelType,
+                                client.getBusinessType()),
+                        (levelType, departments, departmentIndex, designations) -> this.designationService
+                                .createForRegistration(client, designations, departmentIndex),
+                        (levelType, departments, departmentIndex, designations, designationIndex) -> this.appRegistrationDAO
+                                .getUserDesignationsForRegistration(
                                         appId,
                                         appClientId,
                                         urlClientId,
@@ -1105,7 +1105,8 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                         (levelType, departments, departmentIndex, designations, designationIndex, userDesignations) -> {
                             if (userDesignations.isEmpty()
                                     || !designationIndex.containsKey(
-                                    userDesignations.getFirst().getDesignationId())) return Mono.just(true);
+                                    userDesignations.getFirst().getDesignationId()))
+                                return Mono.just(true);
 
                             return this.dao.addDesignation(
                                     userId,
@@ -1188,8 +1189,8 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                                 .readById(id)
                                 .flatMap(e -> this.clientService.isBeingManagedBy(
                                         ULong.valueOf(ca.getLoggedInFromClientId()), e.getClientId())),
-                        (ca, id, sysOrManaged) ->
-                                Boolean.FALSE.equals(sysOrManaged) ? Mono.empty() : this.dao.makeUserInActive(id))
+                        (ca, id, sysOrManaged) -> Boolean.FALSE.equals(sysOrManaged) ? Mono.empty()
+                                : this.dao.makeUserInActive(id))
                 .contextWrite(Context.of(LogUtil.METHOD_NAME, "UserService.makeUserInActive"))
                 .switchIfEmpty(this.forbiddenError(SecurityMessageResourceService.ACTIVE_INACTIVE_ERROR, "user"));
     }
@@ -1207,8 +1208,8 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                                 .readById(id)
                                 .flatMap(e -> this.clientService.isBeingManagedBy(
                                         ULong.valueOf(ca.getLoggedInFromClientId()), e.getClientId())),
-                        (ca, id, sysOrManaged) ->
-                                Boolean.FALSE.equals(sysOrManaged) ? Mono.empty() : this.unlockUserInternal(id))
+                        (ca, id, sysOrManaged) -> Boolean.FALSE.equals(sysOrManaged) ? Mono.empty()
+                                : this.unlockUserInternal(id))
                 .contextWrite(Context.of(LogUtil.METHOD_NAME, "UserService.unblockUser"))
                 .switchIfEmpty(this.forbiddenError(SecurityMessageResourceService.ACTIVE_INACTIVE_ERROR, "user"));
     }
@@ -1309,9 +1310,9 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                                         SecurityMessageResourceService.USER_DESIGNATION_MISMATCH)
                                         : Mono.just(user)),
                         (ca, user, sysOrManaged, validUser) -> super.update(user.setDesignationId(designationId)),
-                        (ca, user, sysOrManaged, validUser, updated) -> this.evictTokensAndOwnerCache(
+                        (ca, user, sysOrManaged, validUser, updated) -> this.evictCache(
                                         updated.getId(), updated.getClientId())
-                                .map(evicted -> updated))
+                                .<User>map(evicted -> updated))
                 .contextWrite(Context.of(LogUtil.METHOD_NAME, "UserService.updateDesignation"))
                 .switchIfEmpty(
                         this.forbiddenError(SecurityMessageResourceService.FORBIDDEN_UPDATE, "user designation"));
@@ -1319,8 +1320,8 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
 
     public Mono<Boolean> checkIfUserIsOwner(ULong userId) {
 
-
-        if (userId == null) return Mono.empty();
+        if (userId == null)
+            return Mono.empty();
 
         return this.dao.checkIfUserIsOwner(userId);
     }
@@ -1334,47 +1335,44 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
         List<String> authorities = List.of("Authorities.User_CREATE", "Authorities.ROLE_Owner");
 
         return FlatMapUtil.flatMapMono(
-
                         () -> this.appService.getAppByCode(appCode),
-
                         app -> this.clientService.getClientBy(clientCode),
-
                         (app, client) -> this.profileService.getAppProfilesHavingAuthorities(
                                 app.getId(), client.getId(), authorities),
-
                         (app, client, appAdminProfiles) -> this.dao
                                 .getUsersForProfiles(appAdminProfiles, client.getId())
                                 .flatMap(users -> {
                                     if (users.isEmpty()) {
-                                        return Mono.empty(); // Convert the empty list to empty Mono to trigger switchIfEmpty
+                                        return Mono.empty(); // Convert the empty list to empty Mono to trigger
+                                        // switchIfEmpty
                                     }
                                     return Mono.just(users);
                                 })
                                 .map(users -> users.stream()
                                         .map(User::getEmailId)
                                         .filter(Objects::nonNull)
-                                        .collect(Collectors.toList()))
+                                        .toList())
                                 .map(emails -> Map.of("emails", emails, "addApp", Boolean.FALSE))
                                 .switchIfEmpty(this.dao
                                         .getOwners(client.getId())
                                         .map(users -> users.stream()
                                                 .map(User::getEmailId)
                                                 .filter(Objects::nonNull)
-                                                .collect(Collectors.toList()))
+                                                .toList())
                                         .map(emails -> Map.of("emails", emails, "addApp", Boolean.TRUE))))
                 .contextWrite(Context.of(LogUtil.METHOD_NAME, "UserService.getAppUserAdminEmails"))
                 .defaultIfEmpty(Map.of("emails", List.of(), "addApp", Boolean.FALSE));
     }
 
-    public Mono<List<User>> fetchDetails(List<User> users, ServerHttpRequest request) {
+    public Mono<List<User>> fillDetails(List<User> users, MultiValueMap<String, String> queryParams) {
 
-        String appCode = request.getQueryParams().getFirst("appCode");
-        String appId = request.getQueryParams().getFirst("appId");
+        String appCode = queryParams.getFirst("appCode");
+        String appId = queryParams.getFirst("appId");
 
-        boolean fetchProfiles = BooleanUtil.safeValueOf(request.getQueryParams().getFirst(FETCH_PROFILES));
-        boolean fetchClient = BooleanUtil.safeValueOf(request.getQueryParams().getFirst(FETCH_CLIENT));
-        boolean fetchManagingClient = BooleanUtil.safeValueOf(request.getQueryParams().getFirst(FETCH_MANAGING_CLIENT));
-        boolean fetchCreatedBy = BooleanUtil.safeValueOf(request.getQueryParams().getFirst(FETCH_CREATED_BY));
+        boolean fetchProfiles = BooleanUtil.safeValueOf(queryParams.getFirst(FETCH_PROFILES));
+        boolean fetchClient = BooleanUtil.safeValueOf(queryParams.getFirst(FETCH_CLIENT));
+        boolean fetchManagingClient = BooleanUtil.safeValueOf(queryParams.getFirst(FETCH_MANAGING_CLIENT));
+        boolean fetchCreatedBy = BooleanUtil.safeValueOf(queryParams.getFirst(FETCH_CREATED_BY));
 
         Flux<User> userFlux = Flux.fromIterable(users);
 
@@ -1382,13 +1380,18 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
             userFlux = userFlux.flatMap(user -> this.profileService.fillUser(appCode, appId, user));
 
         if (fetchClient)
-            userFlux = userFlux.flatMap(user -> this.clientService.getClientInfoById(user.getClientId()).map(user::setClient));
+            userFlux = userFlux
+                    .flatMap(user -> this.clientService.getClientInfoById(user.getClientId()).map(user::setClient));
 
         if (fetchManagingClient)
-            userFlux = userFlux.flatMap(user -> this.clientService.getManagedClientOfClientById(user.getClientId()).map(user::setManagingClient));
+            userFlux = userFlux.flatMap(user -> this.clientService
+                    .getManagedClientOfClientById(user.getClientId())
+                    .map(user::setManagingClient));
 
         if (fetchCreatedBy)
-            userFlux = userFlux.filter(user -> user.getCreatedBy() != null && user.getCreatedBy().intValue() != 0).flatMap(user -> this.dao.readInternal(user.getCreatedBy()).map(user::setCreatedByUser));
+            userFlux = userFlux.filter(user ->
+                            user.getCreatedBy() != null && user.getCreatedBy().intValue() != 0)
+                    .flatMap(user -> this.readInternal(user.getCreatedBy()).map(user::setCreatedByUser));
 
         return userFlux.collectList();
     }
